# CatterPlot

./: CatterPlot.py  README.md  cat.py  catter.ipynb  catter.py  pyproject.toml
Example/: cats.pkl
