[tool.poetry]
name = "CatterPlot"
version = "0.1.0"
description = "Investigate various cat breeds using data fetched from TheCatAPI.com"
authors = ["NBPub"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/NBPub/CatterPlot"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
guizero = "^1.2.0"
Pillow = "^8.2.0"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
